--- a/web/index.html
+++ b/web/index.html
@@ -97,7 +97,7 @@
       e.target.message.value = '';
 
       try {
-        const res = await fetch('http://localhost:5000/api/llama/generate', {
+        const res = await fetch('http://192.168.0.101:5000/api/llama/generate', {
           method: 'POST',
           headers: {'Content-Type': 'application/json'},
           body: JSON.stringify({ prompt: message })
